--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "modulism",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "",
   "main": "./src/index.js",
   "bin": {
     "modulism": "./src/index.js"
   },
   "author": "Ivan Davydov (https://davy.page)",
+  "repository": "github:IDSaves/modulism",
   "license": "MIT",
   "keywords": [
     "cli",
