--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modulism",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "",
   "main": "./src/index.js",
   "bin": {
@@ -8,6 +8,7 @@
   },
   "author": "Ivan Davydov (https://davy.page)",
   "repository": "github:IDSaves/modulism",
+  "homepage": "https://davy.page/modulism",
   "license": "MIT",
   "keywords": [
     "cli",
